# fpsyd-liquid-haskell

./: .gitignore  Makefile  README.md  Setup.hs  cabal.sandbox.config  index.html  liquid-haskell-talk.cabal
liquid/: Main.hs
src/: LocalPrelude.hs  Talk.lhs
src/Data/: Binomial.hs  Evens.hs  OrdList.hs  RedBlack.hs
trash/Data/: OrdList.hs  RedBlack.hs
