name:               liquid-haskell-talk
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014
synopsis:           A Talk on Liquid Haskell
category:           Data
description:        A talk on Liquid Haskell
homepage:           https://github.com/domdere/liquid-haskell-talk/issues
bug-reports:        https://github.com/domdere/liquid-haskell-talk/issues
cabal-version:      >= 1.18
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/liquid-haskell-talk

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:    Talk

    other-modules:      LocalPrelude
                    ,   Data.Evens

    default-extensions: NoImplicitPrelude
                    ,   Safe

executable              app
    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main

    main-is:            Main.hs

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults
                        -- -i.:..
                        -optl-Wl,-rpath,$ORIGIN
    --extra-libraries:
    --extra-lib-dirs:
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:      base < 5 && >= 4
                    ,   liquid-haskell-talk

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base < 5 && >= 3
                    ,   doctest >= 0.9.7
                    ,   filepath >= 1.3
                    ,   directory >= 1.1
                    ,   QuickCheck >= 2.0

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests

test-suite              hlint
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     hlint
    build-depends:      base
                    ,   hlint               == 1.8.*

benchmark               benchmarks
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     benchmarks
    main-is:            Main.hs
    ghc-options:        -O2 -rtsopts

    build-depends:      base > 4 && <= 5
                    ,   liquid-haskell-talk
                    ,   criterion >= 0.8
